<resources>
    <string name="app_name">Vibras</string>
    <string name="select_one">Select One-</string>
    <string name="default_notification_channel_id">1</string>
    <string name="user">User</string>
    <string name="company">Company</string>
    <string name="email_mobile_number">Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="next">Next</string>
    <string name="fetching_fcm_token_failed">Fetching FCM registration token failed</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="verify">Verify</string>
    <string name="title_home">Home</string>
    <string name="title_Chat">Chat</string>
    <string name="title_notifications">Notifications</string>
    <string name="clear"><u>Clear</u></string>
    <string name="apply_filters">Apply Filters</string>
    <string name="view_all"><u>VIEW ALL</u></string>
    <string name="line">Believe in yourself, take on your challenges, dig deep within yourself to conquer fears. Never let anyone bring you down. You got to keep going.</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="hey_there">Hey there,</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="textab">Lorem ipsum dolor.</string>
    <string name="save_profile">Save Profile</string>
    <string name="payments">Payments</string>
    <string name="subscription">Subscription</string>
    <string name="first_name">First Name</string>
    <string name="create_account">Create Account</string>
    <string name="save">Save</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_pass">Enter Password</string>
    <string name="select_dare">Please select Date of Birth</string>
    <string name="your_phone_number">Mobile Number</string>
    <string name="enter_first">Enter First Name</string>
    <string name="enter_last">Enter Last Name</string>
    <string name="on_error">On error</string>
    <string name="msg_noInternet">Internet Connection Not Available</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="please_wait">Please wait</string>
    <string name="please_enter_com_otp">Please enter otp.</string>
    <string name="logged_in_success">Logged in successfully</string>
    <string name="permission_denied_boo">Permission Denied</string>
    <string name="select_image_from">Select Image From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="last_name">Last Name</string>
    <string name="bio">Bio</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_old_pass">Please enter old password.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="password_mismatched">Please make sure your password match.</string>
    <string name="enter_new_password">Please enter new password.</string>
    <string name="transactions">Transactions</string>
    <string name="notifications">Notifications</string>
    <string name="general_notifcations">General Notifications</string>
    <string name="friends">Friends</string>
    <string name="comments">Comments</string>
    <string name="delete_post">Delete Post</string>
    <string name="are_you_sure_want_to_delete_post">Are you sure you want to delete Post?</string>
    <string name="are_you_sure_want_to_report_post">Are you sure you want to report Post?</string>
    <string name="select_what_to_edit">Select what to Edit</string>
    <string name="create">Create</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Start Time</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_booking_amount">Enter Booking amount</string>
    <string name="enter_event_details">Enter Event Details</string>
    <string name="allow_users_to_comment_on_the_event_post">Allow users to comment on the event post.</string>
    <string name="add_event">Add Event</string>
    <string name="enter_restaurant_name">Enter Restaurant Name</string>
    <string name="enter_accommodation_name">Enter Accommodation Name</string>
    <string name="enter_accommodation_location">Enter   Restaurant Location</string>
    <string name="enter_restaurant_location">Enter Accommodation Location</string>
    <string name="enter_details">Enter Details</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="restaurant">Restaurant</string>
    <string name="events">Events</string>
    <string name="add_card">Add Card</string>
    <string name="search_event">Search Event</string>
    <string name="online_courses">Online Courses</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="like_count">Like Count</string>
    <string name="followers_count">Followers Count</string>
    <string name="private_account">Private Account</string>
    <string name="category_of_event">Category of Event</string>
    <string name="restaurants">Restaurants</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="permisson_denied">Permission Denies</string>
    <string name="enter_group_name">Enter Group Details</string>
    <string name="view"><u>View</u></string>
    <string name="create_group">Create Group</string>
    <string name="pay">Pay</string>
    <string name="manage_and_set_your_preferences_to_find_the_best_matches_for_you_keep_enjoying">Manage and set your preferences to find the best matches for you, keep enjoying!</string>
    <string name="date_of_event">Date of Event</string>
    <string name="name_of_event">Name of Event</string>
    <string name="time_of_event">Time of Event</string>
    <string name="contact_of_acco">Contact No of Accommodation</string>
    <string name="contact_of_event">Contact No of Event</string>
    <string name="contact_of_rect">Contact No of Restaurants</string>
    <string name="location_of_event">Location of event</string>
    <string name="add_photos_videos">Add Photos/ Videos</string>
    <string name="group_detail">Group Detail</string>
    <string name="join">Join</string>
    <string name="participants">Participants</string>
    <string name="event_categories">Event Categories</string>
    <string name="help">Help</string>
    <string name="groups">Groups</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="about_us">About Us</string>
    <string name="add_like">Add Like</string>
    <string name="signup">Signup</string>
    <string name="delete_group">Delete Group</string>
    <string name="share_using">Share Using</string>
    <string name="reject_call">Reject Call</string>
    <string name="answer_call">Answer Call</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_password">Forget Your Password</string>
    <string name="go_back_to_login">Go back to </string>
    <string name="reset_passwod">Reset Password</string>
    <string name="e_mail">"E-mail:"</string>
    <string name="select_language">Select Language</string>
    <string name="change_language">Change Language</string>
    <string name="send"> Send </string>
    <string name="add_new_card">ADD NEW CARD</string>
    <string name="all_comments">All Comments</string>
    <string name="in_coming_call">In Coming Call</string>
    <string name="current_password">Current password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_message">Enter Message...</string>
    <string name="about_me">About me</string>
    <string name="saved_events">Saved Events</string>
    <string name="saved_restaurants">Saved Restaurants</string>
    <string name="payment">Payment</string>
    <string name="sign_out">Sign out</string>
    <string name="create_an_account">Create an Account</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="gender">Gender</string>
    <string name="or">Or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="search">Search</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="post">Post</string>
    <string name="posts">Posts</string>
    <string name="story">Story</string>
    <string name="discard">Discard</string>
    <string name="publish">Publish</string>
    <string name="personal_details">Personal Details</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="details">Details</string>
    <string name="photos">Photos</string>
    <string name="join_event">Join Event</string>
    <string name="filter">Filter</string>
    <string name="want_to_meet">Want to Meet</string>
    <string name="preferred_age_range">Preferred Age Range</string>
    <string name="location">Location</string>
    <string name="distance_range">Distance Range</string>
    <string name="likes_received">Likes Received</string>
    <string name="likes_given">Likes Given</string>
    <string name="i_like">I Like</string>
    <string name="write_him_something_original">Write him something original :)</string>
    <string name="likes_interests">Likes, Interests</string>
    <string name="skip">Skip</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="post_comment">Post comment</string>
    <string name="what_do_you_think">What do you think ?</string>
    <string name="please_give_your_rating_by_clicking_on_the_stars_below">Please give your rating by clicking on the stars below</string>
    <string name="tell_us_about_your_experience">Tell us about your experience</string>
    <string name="contact_no">Contact No :-</string>
    <string name="search_history">Search History</string>
    <string name="security_options">Security Options</string>
    <string name="apply_for_verified_profile">Apply For Verified Profile</string>
    <string name="get_verified">Get Verified</string>
    <string name="by_continuing_you_accept_our_privacy_policy_and_term_of_use">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="htake_selfie">HTake Selfie!</string>
    <string name="please_enter_the_4_digit_code_sent_to_your_number_mail_id">Please enter the 4-digit code sent to your number/ mail ID.</string>
    <string name="verification">Verification</string>
    <string name="post_cover_image">Post Cover Image</string>
    <string name="add_photos">Add Photos</string>
    <string name="event">Event</string>
    <string name="accommodation">Accommodation</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="name_of_restaurant">Name of Restaurant</string>
    <string name="location_of_restaurant">Location of restaurant</string>
    <string name="select_option" translatable="false">Select Option</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="share" translatable="false">Share</string>
    <string name="cancel">Cancel</string>
    <string name="please_purchase_6_months_plan_cost_49_for_uploading_restaurant">Please purchase 3 months plan cost €49 for uploading restaurant</string>
    <string name="restaurant_subscription_plan">Restaurant Subscription plan</string>
    <string name="purchase">Purchase</string>
</resources>