<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home_company">

    <fragment
        android:id="@+id/navigation_home_company"
        android:name="com.my.vibras.fragment.EventsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_events"></fragment>

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.my.vibras.fragment.PostEventsRestaurentFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_post_events_restaurent" />


    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.my.vibras.fragment.ComapnyNotificationsFragment"
        android:label="@string/title_Chat"
        tools:layout="@layout/fragment_notifications_comapny" />


    <fragment
        android:id="@+id/navigation_Profile"
        android:name="com.my.vibras.fragment.ComapnyProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_comapny_my_profile" />


</navigation>