<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:padding="@dimen/_10sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:background="@drawable/circle_gray">

                </de.hdodenhof.circleimageview.CircleImageView>

                <ImageView
                    android:id="@+id/ivCamera"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/camera_img">

                </ImageView>

            </RelativeLayout>

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:textStyle="bold"
                android:padding="@dimen/_5sdp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_cover_image"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/restaurant_details"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/roboto_light"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_restaurant"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/gray"
                />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="@dimen/_2sdp">

                <EditText
                    android:fontFamily="@font/roboto_light"
                    android:id="@+id/etRestaurantName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/enter_restaurant_name"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray">

                </EditText>

            </androidx.cardview.widget.CardView>

            <TextView
                android:fontFamily="@font/roboto_light"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_of_restaurant"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/gray"
                />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="@dimen/_2sdp">

                <EditText
                    android:id="@+id/etLocation"
                    android:fontFamily="@font/roboto_light"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/enter_restaurant_location"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:editable="false"
                    android:focusable="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray">

                </EditText>

            </androidx.cardview.widget.CardView>


            <TextView
                android:fontFamily="@font/roboto_light"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_of_rect"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/gray"
                />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="@dimen/_2sdp">

                <EditText
                    android:id="@+id/edt_contact"
                    android:fontFamily="@font/roboto_light"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_12sdp"
                    android:background="@null"
                    android:digits="0123456789"
                    android:hint="@string/enter_mobile"
                    android:inputType="phone"
                    android:focusable="true"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"
                    android:textColorHint="@color/gray">

                </EditText>

            </androidx.cardview.widget.CardView>

            <TextView
                android:fontFamily="@font/roboto_light"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_of_event"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/gray"
                />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="@dimen/_2sdp">

                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:drawableRight="@drawable/arrw_bttm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/gray">

                </Spinner>

            </androidx.cardview.widget.CardView>

            <TextView
                android:fontFamily="@font/roboto_light"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/gray"
                />

            <RelativeLayout
                android:elevation="@dimen/_5sdp"
                android:background="@drawable/border_gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                >

                <EditText
                    android:id="@+id/etDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/enter_details"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_photos"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/ivMultiple"
                    android:src="@drawable/post_img"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    >

                </ImageView>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rvImages"/>


            </LinearLayout>


            <RelativeLayout
                android:id="@+id/rlAdd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/border_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="20sp"
                    android:text="@string/add_restaurant"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</layout>

