<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/inter_semi_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/restaurant_subscription_plan"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
           />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_purchase_6_months_plan_cost_49_for_uploading_restaurant"
                android:textSize="@dimen/_14sdp"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                />
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPurchase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:background="@color/black"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/purchase"
        android:fontFamily="@font/poppins_medium"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:background="#D6D6D6"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:text="@string/cancel"
        />
</LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>