<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.my.vibras.act.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_eventsFragment"
            app:destination="@id/eventsFragment" />

        <action
            android:id="@+id/action_navigation_home_to_otherUserProfileFragment"
            app:destination="@id/otherUserProfileFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.my.vibras.act.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.my.vibras.act.ui.dashboard.ChatFragment"
        android:label="@string/title_Chat"
        tools:layout="@layout/fragment_chat" />


    <fragment
        android:id="@+id/navigation_notifications1"
        android:name="com.my.vibras.act.ui.myprofile.MyProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_my_profile"
        />
    <fragment
        android:id="@+id/eventsFragment"
        android:name="com.my.vibras.fragment.EventsFragment"
        android:label="EventsFragment"
        tools:layout="@layout/fragment_events"
        />

    <fragment
        android:id="@+id/otherUserProfileFragment"
        android:name="com.my.vibras.act.ui.home.OtherUserProfileFragment"
        android:label="OtherUserProfileFragment"
        tools:layout="@layout/fragment_other_user_profile"/>


</navigation>