<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:id="@+id/RRtoolbaar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/create"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:id="@+id/RRtol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RRtoolbaar"
            >

            <TextView
                android:id="@+id/txtEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/event"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAccomadtion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/_5sdp"
                android:text="@string/accommodation"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/_5sdp"
                android:text="@string/restaurant"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/fragment_homeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/RRtol" />



    </RelativeLayout>

</layout>

